# Phase2-L1MenuTools

./: .flake8  .gitignore  README.md  cache  pyproject.toml  requirements.txt
.github/: workflows
.github/workflows/: action.yml  code_quality.yml  lint.yml
ObjectPerformance/: cfg.yaml  cfg_plots.yaml  config.yaml  config_plots.yaml  ntuple_loader.py  plotter.py  plotting_config.yaml
configs/: scaling_thresholds.yaml
configs/V27/: caching.yaml
configs/V28/: caching.yaml
configs/V29/: caching.yaml
configs/V31/: caching.yaml
configs/V32/: caching.yaml
configs/V32nano/: caching.yaml
configs/V33nano/: README.md  caching.yaml
configs/V34nano/: caching.yaml
configs/V35nano_ModTT/: caching.yaml
configs/V36nano_noTT/: caching.yaml
configs/V37nano/: caching.yaml
configs/V38nano/: README.md  caching.yaml  caching_min.yaml  caching_minTk.yaml  caching_signal.yaml
configs/V38nano_DT12x/: README.md  caching.yaml
configs/V40nano/: caching.yaml
configs/V41nano/: caching.yaml
configs/V42nano/: README.md  caching.yaml
configs/V43nano/: README.md  caching.yaml  caching_signal.yaml
configs/V44nano/: README.md  caching.yaml  caching.yaml.bak
configs/caching/: V27_bTagNN.yaml
docs/: development.md  object-performance-details.md  object-performance.md  objects.md  rate_table.md
menu_tools/caching/: cache_objects.py  merge_arrays.py
menu_tools/object_performance/: compare_json.ipynb  compare_plots.py  config.py  (+6 more)
objectPerformance/: README.md  cache_objects.py  cfg.yaml  cfg_plots.yaml  cfg_plots_dy.yaml  cfg_plots_muon.yaml  cfg_scalings.yaml  config.yaml  environment.yml  ntuple_loader.py  plot_config.py  plotter.py  pyproject.toml  quality_obj.py  requirements.txt  turnon_collection.py  utils.py
rates/: README  README.md
(+941 files in other folders)
